--- a/src/config/i18n/locales/fr.json
+++ b/src/config/i18n/locales/fr.json
@@ -1,6 +1,6 @@
 {
   "translation": {
-    "welcome": "Plein Cagnard React Boiler plate",
-    "link": "Aller vers Plein Cagnard 🌅"
+    "welcome": "Megève Cottage - Location de chalet sur Megève",
+    "link": "Visiter le site Megève Cottages ❄"
   }
 }
